# World-Agent

./: .env  .env.example  .gitignore  CHANGELOG.md  Discord_Release_Post.md  README.md  debug_ctx.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sample.txt  server.py  start.bat
agents/: __init__.py
agents/text_processing/: __init__.py  agent.py  prompts.py
agents/text_processing/skills/: __init__.py  full_llm_clean.py  smart_chunking.py
agents/text_processing/tools/: __init__.py
common/rag/: __init__.py  embeddings.py  vector_store.py
common/tools/: __init__.py
common/tools/rag/: __init__.py  rag_tools.py
core/: prompts.py  react_agent.py
data/backend_chats/: sess_vusqc1unj.json
data/logs/: sess_t2o5d03a8.jsonl
data/traces/: sess_t2o5d03a8.jsonl
database/: connection.py  models.py
docs/: Modification_Record.md  PROJECT_RULES.md  World_Agent_Codebase_Analysis.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Mascot.jsx  (+5 more)
output/: 2026_Tool_Calling_Interview_Report.md
skill/: __init__.py  data_cleaning.py  smart_chunking.py
static/: app.js  index.html  style.css
tests/: scratch_test.py  test_embedding.py
tool/: __init__.py
tool/chunk_text/: chunk_text.py
tool/clean_text/: __init__.py  clean_text.py  llm_batch_clean.py
tool/json_to_txt/: __init__.py  json_to_txt.py
tool/list_dir/: list_dir.py
tool/load_skill/: __init__.py
tool/read_chunk/: read_chunk.py
tool/read_file/: read_file.py
tool/write_file/: write_file.py
(+19 files in other folders)
